Linked css style file with main page.
Completed heading and styling it.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,53 @@
 <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <div class="head">
-        <div class="Logo">Header logo</div>
+        <div class="logo">Header logo</div>
         <ul>
             <li><a href="#">Link one</a></li>
             <li><a href="#">Link two</a></li>
             <li><a href="#">LInk three</a></li>
         </ul>
+
+    </div>
+
+    <div class="first">
+        <div class="text">
+            <div class="introText"> Something about awesome site</div>
+            <div class="bodyText"> Write paragraph here</div>
+            <a href="#" class="button"> button here</a>
+        </div>
+        <img src="#" alt="Image goes here" width="310" height="310">
+
+    </div>
+
+    <div class="second">
+       <div class="text"> Information here</div>
+       <div class="items">
+            <div class="block">
+                <img src="#" alt="First image" height="310" width="310">
+                <div>First image subtext here</div>
+            </div>
+
+            <div class="block">
+                <img src="#" alt="Second image" height="310" width="310">
+                <div>Second image subtext here</div>
+            </div>
+
+            <div class="block">
+                <img src="#" alt="Third image" height="310" width="310">
+                <div>Third image subtext here</div>
+            </div>
+
+            <div class="block">
+                <img src="#" alt="Fourth image" height="310" width="310">
+                <div>Fourth image subtext here</div>
+            </div>
+       </div> 
 
     </div>
     
