Finished the first part of the project.
Added space for image.

--- a/index.html
+++ b/index.html
@@ -11,25 +11,30 @@
     <div class="head">
         <div class="logo">Header logo</div>
         <ul>
-            <li><a href="#">Link one</a></li>
-            <li><a href="#">Link two</a></li>
-            <li><a href="#">LInk three</a></li>
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
         </ul>
 
     </div>
 
     <div class="first">
-        <div class="text">
-            <div class="introText"> Something about awesome site</div>
-            <div class="bodyText"> Write paragraph here</div>
-            <a href="#" class="button"> button here</a>
+        <div class="ftext">
+            <div class="introText"> This website is awesome</div>
+            <div class="bodyText"> The website has some 
+                subtext thet goes here under the main 
+                title. Its a smaller font and colour is 
+                lower contrast
+            </div>
+            <a href="#" class="button"> Sign up</a>
         </div>
-        <img src="#" alt="Image goes here" width="310" height="310">
+        
+        <img src="./image holder.png" alt="Image goes here" width="310" height="310">
 
     </div>
 
     <div class="second">
-       <div class="text"> Information here</div>
+       <div class="stext"> Information here</div>
        <div class="items">
             <div class="block">
                 <img src="#" alt="First image" height="310" width="310">
