Finished second section of the project.
Added corresponding css style.

--- a/index.html
+++ b/index.html
@@ -28,36 +28,21 @@
             </div>
             <a href="#" class="button"> Sign up</a>
         </div>
-        
-        <img src="./image holder.png" alt="Image goes here" width="310" height="310">
-
+        <div class="imageholder">This is a placeholder for an image</div>
     </div>
 
-    <div class="second">
-       <div class="stext"> Information here</div>
-       <div class="items">
-            <div class="block">
-                <img src="#" alt="First image" height="310" width="310">
-                <div>First image subtext here</div>
+    <section class="second">
+       <div class="second-section">
+            <div class="information">Some random information</div>
+                <ul class="items-list">
+                    <li class="item"><div class="item-square"></div><div class="item-text">this is some subtext under an illustration or image</div></li>
+                    <li class="item"><div class="item-square"></div><div class="item-text">this is some subtext under an illustration or image</div></li>
+                    <li class="item"><div class="item-square"></div><div class="item-text">this is some subtext under an illustration or image</div></li>
+                    <li class="item"><div class="item-square"></div><div class="item-text">this is some subtext under an illustration or image</div></li>
+                </ul>
             </div>
-
-            <div class="block">
-                <img src="#" alt="Second image" height="310" width="310">
-                <div>Second image subtext here</div>
-            </div>
-
-            <div class="block">
-                <img src="#" alt="Third image" height="310" width="310">
-                <div>Third image subtext here</div>
-            </div>
-
-            <div class="block">
-                <img src="#" alt="Fourth image" height="310" width="310">
-                <div>Fourth image subtext here</div>
-            </div>
-       </div> 
-
-    </div>
+        </div>
+    </section>
     
 </body>
 
