--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
 
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -42,6 +46,21 @@
                 </ul>
             </div>
         </div>
+    </section>
+
+    <section class="third">
+        <div class="box">
+            <div class="text">
+                <div class="quote">This is an inspirational quote 
+                    or a testimonial from a customer. Maybe it's 
+                    filling up space, or maybe people will actually 
+                    read it. Who knows? All I know is that it looks 
+                    nice.
+                </div>
+                <div class="author">- Thor, God of Thunder</div>
+            </div>
+        </div>
+
     </section>
     
 </body>
