--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
         </div>
 
     </section>
+
+    <section class="foot">
+        <div class="box">
+            <div class="footer">
+                Copyright © The Odin Project 2025 
+            </div>
+        </div>
+    </section>
     
 </body>
 
